--- a/_layouts/birthday-card.html
+++ b/_layouts/birthday-card.html
@@ -2,6 +2,7 @@
 <html lang="uk">
    <head>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>{{ page.title }}</title>
       <style>
         body {
@@ -27,7 +28,6 @@
 
         .card-image {
           width: 100%;
-          height: 500px;
           background-color: #16213e;
           display: flex;
           justify-content: center;
@@ -53,6 +53,29 @@
           margin-top: 20px;
           font-size: 14px;
           color: #4ecdc4;
+        }
+
+        /* Media Queries */
+        @media screen and (min-width: 768px) {
+          .card {
+              padding: 30px;
+          }
+
+          .game-image {
+              height: 250px;
+          }
+
+          h1 {
+              font-size: 2rem;
+          }
+
+          .birthday-message {
+              font-size: 1.1rem;
+          }
+
+          .cool-refs {
+              font-size: 1rem;
+          }
         }
       </style>
    </head>
